Comments for AppController@store
